UPDATE: Replace usage of File objects by Path objects in many other classes.